--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>teste img</title>
+    <title>Box Shadow | Praticando</title>
 </head>
 <body> 
         <img src="/paint_brush_icon_181902.png" alt="">
